--- a/templates/result.html
+++ b/templates/result.html
@@ -9,7 +9,7 @@
     </head>
 <body>
     <div class="container">
-        <h3> Sonuç puanınız : {{values}}</h3>
+        <h3> Sonuç puanınız : {{data}}</h3>
         <br/>
     </div>
 </body>
