--- a/templates/quizPage.html
+++ b/templates/quizPage.html
@@ -15,7 +15,7 @@
                 {%else%}
                     <h2>Yapay zekâ sınavına hoş geldiniz</h2>
                 {%endif%}
-                <h6 id="quizCodeName">{{quizName}}</h6>
+                <h6 id="quizCodeName" style="visibility:hidden;">{{quizName}}</h6>
             </div>
         </header>
         <div class="container" id="mainContainer">
